style.scss, _variables.scss and _reset.scss are updated.

--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -1,4 +1,14 @@
+@import "variables";
+html{
+    box-sizing: border-box;
+ }
 
+ body{
+    font-family: $font-body;
+    width: 100%;
+ }
+ 
+ 
 
 
 
