--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+html {
+  box-sizing: border-box;
+}
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
+}
 
 /*# sourceMappingURL=style.css.map */
