--- a/style.css
+++ b/style.css
@@ -43,4 +43,21 @@ header::after {
   clear: both;
 }
 
+ul {
+  list-style-type: none;
+}
+ul li {
+  display: inline;
+}
+ul li a {
+  color: #5f6368;
+  text-decoration: none;
+  margin-left: 0.75em;
+  margin-right: 0.75em;
+  font-size: 13px;
+}
+ul li a:hover {
+  text-decoration: underline;
+}
+
 /*# sourceMappingURL=style.css.map */
