--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -7,6 +7,35 @@ header {
   .header-right {
     float: right;
     margin: 20px;
+
+    #appicon{
+      vertical-align: middle;
+      opacity: 0.5;
+
+      &:hover{
+        opacity: 1;
+     }
+
+    }
+
+    #sign-in-button{
+      background-color: #4285f4;
+      color: white;
+      border: none;
+      height: 30px;
+      width: 70px;
+      border-radius: 5px;
+
+      &:hover{
+        cursor: pointer;
+     }
+     
+     &:active{
+        box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.15);
+     }
+   
+   }
+
   }
 
   &::after{
